Fix PDF generation folder
Generate the PDF inside the tree deployed on Github pages.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 
 script:
   - gitbook build
-  - gitbook pdf . ruggedpod-documentation.pdf
+  - gitbook pdf . _book/ruggedpod-documentation.pdf
 
 after_success:
   - bash deploy.sh
